--- a/.github/workflows/test-matrix.yml
+++ b/.github/workflows/test-matrix.yml
@@ -34,6 +34,8 @@ jobs:
       matrix:
         os:
           - "ubuntu-20.04"
+          - "windows-2019"
+          - "windows-2022"
         elixir:
           - "1.14.x"
           - "1.15.x"
@@ -66,11 +68,13 @@ jobs:
             otp: "26.x"
             os: "ubuntu-22.04"
             type: required
+            
           # Elixir 1.14 also supports OTP 23
           - elixir: "1.14.x"
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.13 supports OTP 22-25
           - elixir: "1.13.x"
             otp: "22.x"
@@ -88,6 +92,7 @@ jobs:
             otp: "25.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.12 supports OTP 22-24
           - elixir: "1.12.x"
             otp: "22.x"
@@ -101,6 +106,7 @@ jobs:
             otp: "24.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.11 supports OTP 21-23
           - elixir: "1.11.x"
             otp: "21.x"
@@ -114,6 +120,7 @@ jobs:
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.10 supports OTP 21-23
           - elixir: "1.10.x"
             otp: "21.x"
@@ -127,6 +134,7 @@ jobs:
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.9 supports OTP 20-22
           - elixir: "1.9.x"
             otp: "20.x"
@@ -140,6 +148,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.8 supports OTP 20-22
           - elixir: "1.8.x"
             otp: "20.x"
@@ -153,6 +162,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.7 supports OTP 19-22
           #  Note that OTP < 20 requires ubuntu-18.04, which is no longer supported by GitHub actions,
           #  so we skip it
@@ -172,6 +182,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.6 supports OTP 19-21
           #  Note that OTP < 20 requires ubuntu-18.04, which is no longer supported by GitHub actions,
           #  so we skip it
@@ -235,6 +246,8 @@ jobs:
       matrix:
         os:
           - "ubuntu-20.04"
+          - "windows-2019"
+          - "windows-2022"
         elixir:
           - "1.14.x"
           - "1.15.x"
@@ -267,11 +280,13 @@ jobs:
             otp: "26.x"
             os: "ubuntu-22.04"
             type: required
+            
           # Elixir 1.14 also supports OTP 23
           - elixir: "1.14.x"
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.13 supports OTP 22-25
           - elixir: "1.13.x"
             otp: "22.x"
@@ -289,6 +304,7 @@ jobs:
             otp: "25.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.12 supports OTP 22-24
           - elixir: "1.12.x"
             otp: "22.x"
@@ -302,6 +318,7 @@ jobs:
             otp: "24.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.11 supports OTP 21-23
           - elixir: "1.11.x"
             otp: "21.x"
@@ -315,6 +332,7 @@ jobs:
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.10 supports OTP 21-23
           - elixir: "1.10.x"
             otp: "21.x"
@@ -328,6 +346,7 @@ jobs:
             otp: "23.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.9 supports OTP 20-22
           - elixir: "1.9.x"
             otp: "20.x"
@@ -341,6 +360,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.8 supports OTP 20-22
           - elixir: "1.8.x"
             otp: "20.x"
@@ -354,6 +374,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.7 supports OTP 19-22
           #  Note that OTP < 20 requires ubuntu-18.04, which is no longer supported by GitHub actions,
           #  so we skip it
@@ -373,6 +394,7 @@ jobs:
             otp: "22.x"
             os: "ubuntu-20.04"
             type: required
+            
           # Elixir 1.6 supports OTP 19-21
           #  Note that OTP < 20 requires ubuntu-18.04, which is no longer supported by GitHub actions,
           #  so we skip it
