Work on test suite.

--- a/.github/workflows/test-matrix.yml
+++ b/.github/workflows/test-matrix.yml
@@ -2,22 +2,18 @@ name: Test ❯ Matrix
 
 on:
   workflow_dispatch: {}
-  push: {}
 
-  # pull_request:
-  #   branches:
-  #     - latest
-  #     - release
+  pull_request:
+    branches:
+      - latest
+      - release
 
-  # push:
-  #   branches:
-  #     - release
-  #     - latest
+  push:
+    branches:
+      - release
+      - latest
 
 env:
-  preferred-elixir: "1.16.x"
-  preferred-otp: "26.x"
-  cache-version: 5
   MIX_ENV: test
 
 concurrency:
@@ -26,7 +22,7 @@ concurrency:
 
 jobs:
   tests:
-    name: Test Matrix
+    name: Testing Matrix
     runs-on: ${{ matrix.os }}
 
     continue-on-error: ${{ matrix.type == 'optional' }}
@@ -216,7 +212,7 @@ jobs:
           path: |
             deps
             mix.lock
-          key: cache-${{ env.cache-version }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-get-mix-exs-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.exs')) }}
+          key: cache-${{ vars.CACHE_VERSION }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-get-mix-exs-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.exs')) }}
 
       - name: Install mix dependencies
         if: steps.mix-deps-get-cache.outputs.cache-hit != 'true'
@@ -227,7 +223,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: _build
-          key: cache-${{ env.cache-version }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-compile-mix-lock-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+          key: cache-${{ vars.CACHE_VERSION }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-compile-mix-lock-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
 
       - name: Compile mix dependencies
         if: steps.mix-deps-compile-cache.outputs.cache-hit != 'true'
@@ -237,9 +233,10 @@ jobs:
         run: mix test
 
   types:
-    name: Typecheck Matrix
-    runs-on: ubuntu-20.04
+    # Skip type checking for now
     if: ${{ !always() }}
+    name: Typechecking Matrix
+    runs-on: ${{ matrix.os }}
 
     continue-on-error: ${{ matrix.type == 'optional' }}
     strategy:
@@ -420,47 +417,6 @@ jobs:
         with:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
-
-      - name: Restore mix dependency installation cache
-        id: mix-deps-get-cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            deps
-            mix.lock
-          key: cache-${{ env.cache-version }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-get-mix-exs-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.exs')) }}
-
-      - name: Install mix dependencies
-        if: steps.mix-deps-get-cache.outputs.cache-hit != 'true'
-        run: mix deps.get
-
-      - name: Restore mix dependency compilation cache
-        id: mix-deps-compile-cache
-        uses: actions/cache@v4
-        with:
-          path: _build
-          key: cache-${{ env.cache-version }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-deps-compile-mix-lock-file-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
-
-      - name: Compile mix dependencies
-        if: steps.mix-deps-compile-cache.outputs.cache-hit != 'true'
-        run: mix deps.compile
-      - name: Compile mix dependencies
-        if: steps.mix-deps-compile-cache.outputs.cache-hit != 'true'
-        run: mix deps.compile
-
-      - name: Restore mix typecheck cache
-        id: mix-typecheck-cache
-        uses: actions/cache@v4
-        with:
-          path: priv/plts
-          key: cache-${{ env.cache-version }}-os-${{ runner.os }}-${{ steps.beam-versions.outputs.otp-version }}-${{ steps.beam-versions.outputs.elixir-version }}-mix-typecheck
-
-      - name: Setup typechecking
-        if: steps.mix-typecheck-cache.outputs.cache-hit != 'true'
-        run: mix typecheck.build-cache
-
-      - name: Run typecheck tasks
-        run: mix typecheck
 
   results:
     name: Test Matrix Action Results
